Fixes wrapping on lines with a lot of spaces. Closes #203

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -445,7 +445,8 @@ html, body, .container {
     padding: 4px;
     border-spacing: 0;
     flex: 1;
-    overflow: auto;
+    overflow-x: hidden;
+    overflow-y: auto;
     background-color: @body-bg;
 }
 
